--- a/CMF-Week-1/custom.scss
+++ b/CMF-Week-1/custom.scss
@@ -9,6 +9,8 @@ $body-bg: #371142 !default;
 $body-color: #E487BB !default;
 $link-color: #F97B64 !default;
 $selection-bg: #1c5253 !default;
+$code-block-bg: #371142 !default;
+$code-color: #A178EA !default;
 
 // headings
 $presentation-heading-font: "Palatino Linotype", "Book Antiqua", Palatino,
